Updated index.html Education Section

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>Horizon Elementary</li>
-        <li>Banyan Elementary</li>
-        <li>Westpine Middle School</li>
         <li>Piper High School</li>
         <li>Broward College</li>    
+        <li>Linkedin Learning</li>
+        <li>Udemy</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
